[package]
name = "fgamepad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_yaml = "0.8"
dashmap = "4.0.2"
colored = "2"
enigo = "0.0.14"
